--- a/catkin_ws/.vscode/settings.json
+++ b/catkin_ws/.vscode/settings.json
@@ -3,6 +3,9 @@
         "array": "cpp",
         "deque": "cpp",
         "vector": "cpp",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "bitset": "cpp",
+        "chrono": "cpp",
+        "algorithm": "cpp"
     }
 }
