Added and test getLargest function
getLargest works

--- a/catkin_ws/.vscode/settings.json
+++ b/catkin_ws/.vscode/settings.json
@@ -6,6 +6,12 @@
         "string_view": "cpp",
         "bitset": "cpp",
         "chrono": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "*.tcc": "cpp",
+        "memory": "cpp",
+        "istream": "cpp",
+        "functional": "cpp",
+        "tuple": "cpp",
+        "utility": "cpp"
     }
 }
